--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
         <input type="number" name="adulto" id="adulto" placeholder="Adultos">
         <input type="number" name="crianca" id="crianca" placeholder="Crianças">
         <input type="number" name="duracao" id="duracao" placeholder="Duração (h)">
-        <button>Calcular</button>
+        <button onclick="calcular()">Calcular</button>
 
         <div id="resultado">
 
         </div>
 
     </div>    
+
+    <script src="js/script.js"></script>
 
 </body>
 </html>
